Fixed layout bug with head image in home Sponsor tab is now in its correct place Main content is now centered Removed bottom scroll bar

--- a/src/app/components/crud/crud.component.css
+++ b/src/app/components/crud/crud.component.css
@@ -21,7 +21,7 @@
     /* max-height: 15vh;
     min-width: 12vw;
     max-width: 12vw; */
-    position: absolute;
+    /* position: absolute; */
 }
 
 .box-shadow{
